--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
                 closePopup();
             });
         }
+
+        function downloadCSV(){
+            fetch("/exportcsv").then(response => response.blob())
+            .then(blob => {
+                var url = window.URL.createObjectURL(blob);
+                var a = document.createElement('a');
+                a.href = url;
+                a.download = "inventory.csv";
+                document.body.appendChild(a); // we need to append the element to the dom -> otherwise it will not work in firefox
+                a.click();    
+                a.remove();  //afterwards we remove the element again         
+            });
+        }
+
     </script>
 </head>
 <body>
@@ -141,6 +155,8 @@
     <div id='inventory-list'></div>
     <br><br>
     <button id='show-add' onclick='showAdd()'>Add Item</button>
+    <br><br>
+    <button onclick='downloadCSV()'>Download CSV</button>
     
     <div id='popup'>
         <form class='popup-content' onsubmit="return false">
